--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,17 +24,20 @@ html
       #projects, #projects > li { display: block; margin: 0; padding: 0; }
       #projects > li { background: white; }
 
+      .project-subtitle { margin-top: -5px; font-size: 16px; color: #666; margin-bottom: 25px;}
+
       .project-video { outline: 1px solid #aaa; background: #ccc; }
       .project-video iframe { display: block; margin-left: auto; margin-right: auto; }
       .project-video, .project-video iframe { max-height: 450px; overflow: hidden; }
 
+      .project-body { padding: 0 20px; }
       .project-body p { font-family: "Open Sans", Helvetica, Arial, sans-serif; }
       .project-body { margin: 25px 0 15px; font-size: 16px; line-height: 1.5; }
       .project-body h2 { margin-top: 25px; }
 
       .project-title { margin: 40px 0 20px; font-size: 50px; }
       .project-small .project-title { font-size: 30px; margin-top: 25px; }
-      .project-link { border: 1px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
+      .project-link { border: 2px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
       .project-link:hover { background: #cfc; cursor: pointer; }
 
       .project-footer { font-size: 12px; border-top: 1px solid #ddd; padding-top: 5px; color: #888;
@@ -53,7 +56,7 @@ html
     #brand.container-fluid
       a#name(href="/")= title
       |  
-      a.btn.btn-success.btn-mini(href="/projects/?edit") Create a Project
+      a.btn.btn-success.btn-mini(href="/projects/?edit") List your Project or Idea
 
     #content.container-fluid
       block content
