--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,12 @@ html
       #content { max-width: 800px; margin-left: auto; margin-right: auto; }
 
       #projects, #projects > li { display: block; margin: 0; padding: 0; }
-      #projects > li { background: white; }
+      #projects > li { background: white; margin-bottom: 50px; }
+
+      .project-title { margin: 40px 0 20px; font-size: 50px; }
+      .project-small .project-title { font-size: 30px; margin-top: 25px; margin-bottom: 5px; }
+      .project-link { border: 2px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
+      .project-link:hover { background: #cfc; cursor: pointer; }
 
       .project-subtitle { margin-top: -5px; font-size: 16px; color: #666; margin-bottom: 25px;}
 
@@ -30,15 +35,13 @@ html
       .project-video iframe { display: block; margin-left: auto; margin-right: auto; }
       .project-video, .project-video iframe { max-height: 450px; overflow: hidden; }
 
+      .project-images { overflow: auto; }
+      .project-image { width: 150px; height: 150px; text-align: center; outline: 1px solid #aaa; background: #ccc; margin-top: 10px; margin-right: 10px; float: left; display: block; }
+
       .project-body { padding: 0 20px; }
       .project-body p { font-family: "Open Sans", Helvetica, Arial, sans-serif; }
       .project-body { margin: 25px 0 15px; font-size: 16px; line-height: 1.5; }
       .project-body h2 { margin-top: 25px; }
-
-      .project-title { margin: 40px 0 20px; font-size: 50px; }
-      .project-small .project-title { font-size: 30px; margin-top: 25px; }
-      .project-link { border: 2px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
-      .project-link:hover { background: #cfc; cursor: pointer; }
 
       .project-footer { font-size: 12px; border-top: 1px solid #ddd; padding-top: 5px; color: #888;
       margin: 30px 0 40px; }
