--- a/views/project.jade
+++ b/views/project.jade
@@ -17,6 +17,12 @@ block content
       each image in (project.images || [])
         a.project-image(href=image.url)
           img(src=getImageUrl(image.url, 150, 150))
+
+    div.project-body!= resanitize(project.body)
+
+    if project.links && project.links.length
+      div(style="margin-top: 30px; margin-bottom: -7px;")
+        small External links:
     each link in (project.links || [])
       div.project-link
         div
@@ -28,7 +34,6 @@ block content
               | #{link.url} &mdash; #{link.provider_name}
         if link.description
           p= (link.description || '').substr(0, 100) + (link.description.length > 100 ? '...' : '')
-    div.project-body!= resanitize(project.body)
 
     form(action="/delete", method="post")
       p.project-footer
