--- a/views/edit.jade
+++ b/views/edit.jade
@@ -27,7 +27,6 @@ block content
             option(value=person.id, selected=(project.creators || []).indexOf(person.id) > -1)= person.name
 
     hr
-
     h4 Optional Information
     br
 
@@ -48,6 +47,64 @@ block content
       label.control-label(for='body') Extended Description<br><small>(HTML is allowed)</small>
       .controls
         textarea.span6(id='body', name='body', rows=15, placeholder="Describe your project in depth.")= project.body
+
+    hr
+    h4 Classification
+    br
+
+    .control-group
+      label.control-label(for='body') What type of project is this?
+      .controls
+        input(type="checkbox")
+        |  Course project
+        br
+        input(type="checkbox")
+        |  Personal project
+        br
+        input(type="checkbox")
+        |  Research
+        br
+        input(type="checkbox")
+        |  Business/startup
+        br
+        input(type="checkbox")
+        |  Club/organization project
+        br
+        input(type="checkbox")
+        |  Olin improvement
+
+    .control-group
+      label.control-label(for='body') What is the state of completeness?
+      .controls
+        input(type="checkbox")
+        |  Just my idea
+        br
+        input(type="checkbox")
+        |  Work in progress
+        br
+        input(type="checkbox")
+        |  It's complete&mdash;but I want to keep improving it!
+        br
+        input(type="checkbox")
+        |  It's complete&mdash;and I'm done working on it
+        br
+        input(type="checkbox")
+        |  It was a failure!
+
+    .control-group
+      label.control-label(for='body') Are you looking for people to help?
+      .controls
+        input(type="checkbox")
+        |  Yes!
+
+    .control-group
+      label.control-label(for='projects-edit-privacy') Is your post private or public?
+      .controls
+        input(type="radio", name="projects-edit-privacy", checked)
+        |  Private&mdash;My audience is Olin College
+        br
+        input(type="radio", name="projects-edit-public")
+        |  Public&mdash;My audience is the entire world
 
     hr
 
