--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,12 +12,15 @@ html
     script(src="http://harvesthq.github.io/chosen/chosen/chosen.jquery.js")
 
     style
-      #brand { background: #333; padding: 10px 15px; margin: 0; }
-      #name { font-weight: bold; color: #ccc; font-size: 18px; }
-      #brand .btn { float: right; }
+      body { padding-bottom: 60px; }
+
+      #brand { background: #333; margin: 0; padding: 0; }
+      #name { font-weight: bold; color: #ccc; font-size: 18px; display: block; padding: 10px 15px; max-width: 200px;  }
+      #name:hover { background: #666;}
+      #brand .btn { float: right; margin: 10px 10px 0 }
       
       @media (max-width: 767px) {
-        body { padding: 0;}
+        body { padding: 0; }
         #content { padding: 0 20px; }
       }
 
@@ -26,8 +29,10 @@ html
       #projects, #projects > li { display: block; margin: 0; padding: 0; }
       #projects > li { background: white; margin-bottom: 50px; }
 
-      .project-title { margin: 40px 0 20px; font-size: 50px; }
-      .project-small .project-title { font-size: 30px; margin-top: 25px; margin-bottom: 5px; }
+      .project-title { margin: 40px 0 10px; font-size: 40px; }
+      .project-title a { display: block; background: #eee; }
+      .project-title a:hover { background: #ff6; }
+      .project-small .project-title { font-size: 26px; margin-top: 25px; margin-bottom: 5px; }
       .project-link { border: 2px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
       .project-link:hover { background: #cfc; cursor: pointer; }
 
@@ -38,7 +43,8 @@ html
       .project-video, .project-video iframe { max-height: 450px; overflow: hidden; }
 
       .project-images { overflow: auto; }
-      .project-image { height: 150px; text-align: center; outline: 1px solid #aaa; background: #ccc; margin-top: 10px; display: block; }
+      .project-image { height: 150px; text-align: center; outline: 1px solid #aaa; background: #ccc; margin-top: 10px; }
+      .project-image img { display: block; margin: 0 auto; }
 
 
       @media (min-width: 300px) {
@@ -65,9 +71,9 @@ html
 
   body
     #brand.container-fluid
-      a#name(href="/")= title
-      |  
       a.btn.btn-success.btn-mini(href="/projects/?edit") List your Project or Idea
+      |  
+      a#name(href="/")= title
 
     #content.container-fluid
       block content
