--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,10 +46,8 @@ html
       .project-image { height: 150px; text-align: center; outline: 1px solid #aaa; background: #ccc; margin-top: 10px; }
       .project-image img { display: block; margin: 0 auto; }
 
-
       @media (min-width: 300px) {
-        width: 150px; 
-        margin-right: 10px; float: left; 
+        .project-image { width: 150px; margin-right: 10px; float: left; }
       }
 
       .project-body { padding: 0 20px; }
