--- a/views/project.jade
+++ b/views/project.jade
@@ -14,9 +14,12 @@ block content
     each video in (project.videos || [])
       div.project-video!= video.html
     div.project-images
-      each image in (project.images || [])
-        a.project-image(href=image.url)
-          img(src=getImageUrl(image.url, 150, 150))
+      div.project-images-cell
+        each image, i in (project.images || [])
+          a.project-image(href=image.url, data-toggle="lightbox", data-target="#projectimage" + i)
+            span.project-image-table
+              span.project-image-cell
+                img(src=getImageUrl(image.url, 150, 150))
 
     div.project-body!= resanitize(project.body)
 
