--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,8 @@ html
     script(src="http://fitvidsjs.com/js/jquery.fitvids.js")
     link(href="http://harvesthq.github.io/chosen/chosen/chosen.css", rel="stylesheet")
     script(src="http://harvesthq.github.io/chosen/chosen/chosen.jquery.js")
+    link(href="http://jbutz.github.io/bootstrap-lightbox/assets/css/bootstrap-lightbox.min.css", rel="stylesheet")
+    script(src="http://jbutz.github.io/bootstrap-lightbox/assets/js/bootstrap-lightbox.min.js")
 
     style
       body { padding-bottom: 60px; }
@@ -43,8 +45,8 @@ html
       .project-video, .project-video iframe { max-height: 450px; overflow: hidden; }
 
       .project-images { overflow: auto; }
-      .project-image { text-align: center; outline: 1px solid #aaa; background: #ccc; margin-top: 10px; }
-      .project-image-table { display: table; height: 100%; }
+      .project-image { text-align: center; outline: 1px solid #aaa; background: #ccc; margin-top: 10px; display: block; }
+      .project-image-table { display: table; height: 100%; margin: 0 auto; }
       .project-image-cell { display: table-cell; text-align: center; vertical-align: middle; }
       .project-image img { display: block; margin: 0 auto; }
 
