--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,7 +32,8 @@ html
       #projects > li { background: white; margin-bottom: 50px; }
 
       .project-title { margin: 40px 0 10px; font-size: 40px; }
-      .project-title a { display: block; background: #eee; }
+      .project-title a { display: block; }
+      .project-private .project-title a { background: #eee; }
       .project-title a:hover { background: #ff6; }
       .project-small .project-title { font-size: 26px; margin-top: 25px; margin-bottom: 5px; }
       .project-link { border: 2px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
