--- a/views/layout.jade
+++ b/views/layout.jade
@@ -77,6 +77,7 @@ html
   body
     #brand.container-fluid
       a.btn.btn-success.btn-mini(href="/projects/?edit") List your Project or Idea
+      a.btn.btn-success.btn-mini(href="/authenticate") Login
       |  
       a#name(href="/")= title
 
