--- a/views/project.jade
+++ b/views/project.jade
@@ -13,21 +13,22 @@ block content
 
     each video in (project.videos || [])
       div.project-video!= video.html
-    div.project-images
-      div.project-images-cell
-        each image, i in (project.images || [])
-          a.project-image(href=image.url, data-toggle="lightbox", data-target="#projectimage" + i)
-            span.project-image-table
-              span.project-image-cell
-                img(src=getImageUrl(image.url, 150, 150))
+    if project.images && project.images.length
+      div.project-images
+        div.project-images-cell
+          each image, i in (project.images || [])
+            a.project-image(href=image.url, data-toggle="lightbox", data-target="#projectimage" + i)
+              span.project-image-table
+                span.project-image-cell
+                  img(src=getImageUrl(image.url, 150, 150))
 
-          div.lightbox.hide.fade(id="projectimage" + i, tabinde="-1", role="dialog", aria-hidden="true")
-            .lightbox-header
-              button.close(type="button", data-dismiss="lightbox", aria-hidden="true") &times;
-            .lightbox-content
-              img(src=image.url)
-              // .lightbox-caption
-              //  p An image for this project.
+            div.lightbox.hide.fade(id="projectimage" + i, tabinde="-1", role="dialog", aria-hidden="true")
+              .lightbox-header
+                button.close(type="button", data-dismiss="lightbox", aria-hidden="true") &times;
+              .lightbox-content
+                img(src=image.url)
+                // .lightbox-caption
+                //  p An image for this project.
 
     div.project-body!= resanitize(project.body)
 
