Creators can edit too

--- a/views/edit.jade
+++ b/views/edit.jade
@@ -44,7 +44,7 @@ block content
         textarea.span6(id='body', name='links', rows=2, placeholder="e.g. http://archive.org/")= project.links_text
 
     .control-group
-      label.control-label(for='body') Extended Description<br><small>(HTML is allowed)</small>
+      label.control-label(for='body') Extended Description<br><small>(Use HTML)<br><br>Preferrably, do not include images in your text description, and instead include them in the above field.</small>
       .controls
         textarea.span6(id='body', name='body', rows=15, placeholder="Describe your project in depth.")= project.body
 
