--- a/views/project.jade
+++ b/views/project.jade
@@ -49,7 +49,7 @@ block content
 
     form(action="/delete", method="post")
       p.project-footer
-        if user && project.submitter == user.username
+        if canedit
           span(style="float: right")
             a.btn.btn-mini.btn-info(href="/projects/" + project._id + "?edit", style="padding: 0 5px")
               | edit
