--- a/views/edit.jade
+++ b/views/edit.jade
@@ -44,9 +44,9 @@ block content
         textarea.span6(id='body', name='links', rows=2, placeholder="e.g. http://archive.org/")= project.links_text
 
     .control-group
-      label.control-label(for='body') Extended Description<br><small>(Use HTML)<br><br>Preferrably, do not include images in your text description, and instead include them in the above field.</small>
+      label.control-label(for='body') Extended Description<br><small>(Use <a href="http://daringfireball.net/projects/markdown/syntax">Markdown</a> or regular HTML)<br><br>Preferrably do not include images here. Instead add them to the above images field.</small>
       .controls
-        textarea.span6(id='body', name='body', rows=15, placeholder="Describe your project in depth.")= project.body
+        textarea.span6(id='body', name='body', rows=15, placeholder="Describe your project in depth.")= (project.body_text || project.body)
 
     hr
     h4 Classification
