--- a/views/edit.jade
+++ b/views/edit.jade
@@ -20,7 +20,7 @@ block content
         input.span6(id='project-edit-when', name='when', type='text', placeholder='e.g. "April 2013", "May 4, 2013", or "Now".', value=project.when)
 
     .control-group
-      label.control-label(for='project-edit-creators') Students who worked on this project
+      label.control-label(for='project-edit-creators') Students who worked on this project <br><small>Faculty and Staff will be added soon!</small>
       .controls
         select(name="creators", id="project-edit-creators", multiple).chzn-select.span6
           each person in directory
