--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,9 @@ block content
         p.project-subtitle
           if project.when
             i= project.when
-            |  &mdash; 
-          | #{project.summary ? project.summary.replace(/\.?$/, '.') : ''} By <b>
-          != (project.creators || ['anonymous']).join('</b>, <b>')
-          | </b>.
+            if project.creators && project.creators.length
+              |  &mdash; 
+          if project.creators && project.creators.length
+            | #{project.summary ? project.summary.replace(/\.?$/, '.') : ''} By <b>
+            != project.creators.join('</b>, <b>')
+            | </b>.
