--- a/views/edit.jade
+++ b/views/edit.jade
@@ -31,15 +31,15 @@ block content
     br
 
     .control-group
-      label.control-label(for='body') Pictures<br><small>(one per line)</small>
+      label.control-label(for='body') Pictures<br><small>One URL per line. <a href="http://imgur.com/" tabindex="-1">Upload an image?</a></small>
       .controls
         textarea.span6(id='body', name='images', rows=2, placeholder="e.g. http://imgur.com/i/2FIK4")= project.images_text
     .control-group
-      label.control-label(for='body') Videos<br><small>(one per line)</small>
+      label.control-label(for='body') Videos<br><small>One URL per line. <a href="http://www.youtube.com/upload" tabindex="-1">Upload an image?</a></small>
       .controls
         textarea.span6(id='body', name='videos', rows=2, placeholder="e.g. http://youtube.com/?v=239249792")= project.videos_text
     .control-group
-      label.control-label(for='body') External Links<br><small>(one per line)</small>
+      label.control-label(for='body') External Links / Writeups<br><small>One URL per line.</small>
       .controls
         textarea.span6(id='body', name='links', rows=2, placeholder="e.g. http://archive.org/")= project.links_text
 
