--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block content
+  if user
+    p You are logged in. Titles in grey are those not public outside the Olin community. You can edit any project you are listed as having been involved in. Believe in yourself.
+
   ul(id='projects')
     for project in projects
       li(class="project " + (project.large ? 'project-large' : 'project-small') + ' ' + (project.published ? 'project-public' : 'project-private'))
