--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   if user
-    p You are logged in. Titles in grey are those not public outside the Olin community. You can edit any project you are listed as having been involved in. Believe in yourself.
+    p.alert(style="margin-top: 20px;") You are logged in. Titles in grey are those not public outside the Olin community. You can edit any project you are listed as having been involved in. Believe in yourself.
 
   ul(id='projects')
     for project in projects
