--- a/views/edit.jade
+++ b/views/edit.jade
@@ -31,11 +31,11 @@ block content
     br
 
     .control-group
-      label.control-label(for='body') Pictures<br><small>One URL per line. <a href="http://imgur.com/" tabindex="-1">Upload an image?</a></small>
+      label.control-label(for='body') Picture Gallery<br><small>One URL per line. <a href="http://imgur.com/" tabindex="-1">Upload an image?</a></small>
       .controls
         textarea.span6(id='body', name='images', rows=2, placeholder="e.g. http://imgur.com/i/2FIK4")= project.images_text
     .control-group
-      label.control-label(for='body') Videos<br><small>One URL per line. <a href="http://www.youtube.com/upload" tabindex="-1">Upload an image?</a></small>
+      label.control-label(for='body') Video Gallery<br><small>One URL per line. <a href="http://www.youtube.com/upload" tabindex="-1">Upload an image?</a></small>
       .controls
         textarea.span6(id='body', name='videos', rows=2, placeholder="e.g. http://youtube.com/?v=239249792")= project.videos_text
     .control-group
@@ -44,7 +44,7 @@ block content
         textarea.span6(id='body', name='links', rows=2, placeholder="e.g. http://archive.org/")= project.links_text
 
     .control-group
-      label.control-label(for='body') Extended Description<br><small>(Use <a href="http://daringfireball.net/projects/markdown/syntax" tabindex="-1">Markdown</a> or regular HTML)<br><br>Preferrably do not include images here. Instead add them to the above images field.</small>
+      label.control-label(for='body') Extended Description<br><small>(Use <a href="http://daringfireball.net/projects/markdown/syntax" tabindex="-1">Markdown</a> or HTML)<br><br>To add an image with caption, type <code>![caption](url)</code> on its own line.</small>
       .controls
         textarea.span6(id='body', name='body', rows=15, placeholder="Describe your project in depth.")= (project.body_text || project.body)
 
