--- a/views/layout.jade
+++ b/views/layout.jade
@@ -61,7 +61,7 @@ html
       .project-body p { font-family: "Open Sans", Helvetica, Arial, sans-serif; }
       .project-body { margin: 25px 0 15px; font-size: 16px; line-height: 1.5; }
       .project-body h2 { margin-top: 25px; }
-      .project-body img { display: block; margin: 20px auto 0; max-width: 500px; max-height: 500px; }
+      .project-body img { display: block; margin: 20px auto 0; max-width: 100%; max-height: 500px; }
       .project-body a img { border: 4px solid #9bc; }
       .project-body .img-caption { text-align: center; display: block; margin: 5px 20% 30px; font-size: 14px; font-style: italic; text-decoration: none; }
 
@@ -76,7 +76,7 @@ html
         $(".project-video").fitVids();
         $(".chzn-select").chosen();
         $('.project-body img').each(function () {
-          $(this).wrap($('<a>').attr('href', $(this).prop('src')));
+          $(this).wrap($('<a>').attr('href', $(this).prop('src')).css('max-width', '500px'));
           $('<span>').insertAfter(this).text($(this).prop('alt')).addClass('img-caption');
         })
       })
