--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,8 @@ block content
             i= project.when
             if project.creators && project.creators.length
               |  &mdash; 
+          | #{project.summary ? project.summary.replace(/\.?$/, '.') : ''}
           if project.creators && project.creators.length
-            | #{project.summary ? project.summary.replace(/\.?$/, '.') : ''} By <b>
+            |  By <b>
             != project.creators.join('</b>, <b>')
             | </b>.
