--- a/views/edit.jade
+++ b/views/edit.jade
@@ -35,7 +35,7 @@ block content
       .controls
         textarea.span6(id='body', name='images', rows=2, placeholder="e.g. http://imgur.com/i/2FIK4")= project.images_text
     .control-group
-      label.control-label(for='body') Video Gallery<br><small>One URL per line. <a href="http://www.youtube.com/upload" tabindex="-1">Upload an image?</a></small>
+      label.control-label(for='body') Video Gallery<br><small>One URL per line. <a href="http://www.youtube.com/upload" tabindex="-1">Upload a video?</a></small>
       .controls
         textarea.span6(id='body', name='videos', rows=2, placeholder="e.g. http://youtube.com/?v=239249792")= project.videos_text
     .control-group
