--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,9 @@ block content
       li(class="project " + (project.large ? 'project-large' : 'project-small') + ' ' + (project.published ? 'project-public' : 'project-private'))
         h1.project-title
           a(href="/projects/" + project._id)= project.title
+            if (project.videos || []).length
+              |  
+              span.badge.badge-inverse(style="vertical-align: middle") Video
             // if !project.published
             //  |  
             //  span.badge.badge(style="vertical-align: middle") Unpublished
