Video less loudly

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ block content
           a(href="/projects/" + project._id)= project.title
             if (project.videos || []).length
               |  
-              span.badge.badge-inverse(style="vertical-align: middle") Video
+              span.badge(style="vertical-align: middle") Video
             // if !project.published
             //  |  
             //  span.badge.badge(style="vertical-align: middle") Unpublished
