--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,6 +33,8 @@ html
 
       .project-title { margin: 40px 0 10px; font-size: 40px; }
       .project-title a { display: block; }
+      .project-title { position: relative; }
+      #projects .project-title::before { content: attr(data-year); position: absolute; right: 102%; font-size: 22px; color: #aaa; }
       .project-private .project-title a { background: #eee; }
       .project-title a:hover { background: #ff6; }
       .project-small .project-title { font-size: 26px; margin-top: 25px; margin-bottom: 5px; }
