--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,6 +39,16 @@ html
       .project-small .project-title { font-size: 26px; margin-top: 25px; margin-bottom: 5px; }
       .project-link { border: 2px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
       .project-link:hover { background: #cfc; cursor: pointer; }
+      .project-link {
+        white-space: pre;           /* CSS 2.0 */
+        white-space: pre-wrap;      /* CSS 2.1 */
+        white-space: pre-line;      /* CSS 3.0 */
+        white-space: -pre-wrap;     /* Opera 4-6 */
+        white-space: -o-pre-wrap;   /* Opera 7 */
+        white-space: -moz-pre-wrap; /* Mozilla */
+        white-space: -hp-pre-wrap;  /* HP Printers */
+        word-wrap: break-word;      /* IE 5+ */
+        }
 
       .project-subtitle { margin-top: -5px; font-size: 16px; color: #666; margin-bottom: 25px;}
 
