--- a/views/layout.jade
+++ b/views/layout.jade
@@ -97,6 +97,16 @@ html
       })
 
   body
+    div#fb-root
+    script
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=573616499320153";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+
     #brand.container-fluid
       a.btn.btn-success.btn-mini(href="/projects/?edit") List your Project or Idea
       if user
