--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,12 +31,12 @@ html
       #projects, #projects > li { display: block; margin: 0; padding: 0; }
       #projects > li { background: white; margin-bottom: 50px; }
 
-      .project-title { margin: 40px 0 10px; font-size: 40px; }
+      .project-title { margin: 32px 0 8px; font-size: 34px; }
+      /*.project-small .project-title { font-size: 26px; margin-top: 25px; margin-bottom: 5px; }*/
       .project-title a { display: block; }
       .project-title { position: relative; }
       .project-private .project-title a { background: #eee; }
       .project-title a:hover { background: #ff6; }
-      .project-small .project-title { font-size: 26px; margin-top: 25px; margin-bottom: 5px; }
       .project-link { border: 2px solid #afa; margin: 10px 0; padding: 10px 20px 0; }
       .project-link:hover { background: #cfc; cursor: pointer; }
       .project-link {
