--- a/views/layout.jade
+++ b/views/layout.jade
@@ -99,6 +99,7 @@ html
           $(this).wrap($('<a>').attr('href', $(this).prop('src')).css('max-width', '500px'));
           $('<span>').insertAfter(this).text($(this).prop('alt')).addClass('img-caption');
         })
+        $('.project-body table').addClass('table').addClass('table-striped');
       })
 
   body
