--- a/views/project.jade
+++ b/views/project.jade
@@ -11,7 +11,7 @@ block content
       | #{project.summary ? project.summary.replace(/\.?$/, '.') : ''}
       if project.creators && project.creators.length
         |  By <b>
-        != project.creators.join('</b>, <b>')
+        != project.creators.map(function (a) { return '<a href="/projects/?user=' + encodeURIComponent(a) + '">' + a + '</a>'; }).join('</b>, <b>')
         | </b>.
 
     each video in (project.videos || [])
