--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script(src='/javascripts/script.js')
     link(href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css", rel="stylesheet")
+    script(src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js")
     script(src="http://fitvidsjs.com/js/jquery.fitvids.js")
     link(href="http://harvesthq.github.io/chosen/chosen/chosen.css", rel="stylesheet")
     script(src="http://harvesthq.github.io/chosen/chosen/chosen.jquery.js")
