--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
 
+    // JQuery
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script(src='/javascripts/script.js')
     link(href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css", rel="stylesheet")
@@ -14,11 +15,15 @@ html
     link(href="http://jbutz.github.io/bootstrap-lightbox/assets/css/bootstrap-lightbox.min.css", rel="stylesheet")
     script(src="http://jbutz.github.io/bootstrap-lightbox/assets/js/bootstrap-lightbox.min.js")
 
+    link(href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700', rel='stylesheet', type='text/css')
+
     style
       body { padding-bottom: 60px; }
 
-      #brand { background: #333; margin: 0; padding: 0; }
-      #name { font-weight: bold; color: #ccc; font-size: 18px; display: block; padding: 10px 15px; max-width: 200px;  }
+      #brand { background: #333; margin: 0; padding: 0; height: 40px; }
+      #name { font-family: "PT Sans Narrow"; font-size: 20px; color: #ddd; letter-spacing: 1px; font-weight: bold; }
+      #name img { height: 18px; margin-right: 8px; vertical-align: top; }
+      #name { display: block; padding: 10px 15px 0 10px; float: left; height: 30px; }
       #name:hover { background: #666;}
       #brand .btn { float: right; margin: 10px 10px 0 }
       
@@ -121,7 +126,11 @@ html
       else
         a.btn.btn-success.btn-mini(href="/authenticate") Login
       |  
-      a#name(href="/")= title
+
+      a#name(href="/")
+        img(src="/images/olinlogo.png")
+        = title
+        | .com
 
     #content.container-fluid
       block content
