--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   if user
     p.alert.alert-success(style="margin-top: 20px;") You are logged in. Titles in grey are those not public outside the Olin community. You can edit any project you are listed as having been involved in. Believe in yourself.
+      a.btn.btn-success.btn-large.input-block-level(href="/projects/?edit", style="margin-top: 10px;") List your Project or Idea &rarr;
   else
     p.alert.alert-info(style="margin-top: 20px;") You are not logged in. To submit an article or see Olin-only articles, click "Login" in the header bar.
 
